k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          # TODO always pull image
          image: rhecl/golang-api:latest
          ports:
            - containerPort: 3001
# docker credentials secret was created manually in the cluster
# kubectl create secret docker-registry <name> --docker-server=https://index.docker.io/v1/ --docker-username= --docker-password=
      imagePullSecrets:
        - name: dockercred
