k8s/web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web-app
  template:
    metadata:
      labels:
        component: web-app
    spec:
      containers:
        - name: web-app
          # TODO always pull image
          image: rhecl/react-app:latest
          ports:
            - containerPort: 3000
# docker credentials secret was created manually in the cluster
# kubectl create secret docker-registry <name> --docker-server=https://index.docker.io/v1/ --docker-username= --docker-password=
      imagePullSecrets:
        - name: dockercred
