k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 3001
      targetPort: 3001
