k8s/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  type: ClusterIP
  selector:
    component: web-app
  ports:
    - port: 3000
      targetPort: 80
